<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/type_menu"
        android:title="@string/movie"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/type_movie"
                android:title="@string/movie" />
            <item
                android:id="@+id/type_tv_show"
                android:title="@string/tv_show" />
            <item
                android:id="@+id/type_my_favorite"
                android:title="@string/favorite" />
        </menu>
    </item>
    <item
        android:id="@+id/change_lang"
        android:title="@string/language"
        app:showAsAction="never" />
</menu>