<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.a2nr.submissionmodul1.DetailMovieFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"

                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/posterImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:scaleType="centerInside"
                    app:layout_collapseMode="parallax"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage|textMultiLine|textCapWords"
                    android:text="@android:string/unknownName"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextViewEdits" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleTextView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/vote"
                            android:textAlignment="viewEnd"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/vote_average"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@android:string/unknownName"
                            android:textAlignment="viewStart" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/type"
                            android:textAlignment="viewEnd"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/media_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@android:string/unknownName"
                            android:textAlignment="viewStart" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/release_at"
                            android:textAlignment="viewEnd"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/release_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@android:string/unknownName"
                            android:textAlignment="viewStart" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/overview"
                            android:textAlignment="viewEnd"
                            android:textStyle="bold" />

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/overview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textLongMessage|textMultiLine"
                                android:text="@android:string/unknownName"
                                android:textAlignment="viewStart"
                                tools:ignore="TextViewEdits" />
                        </ScrollView>
                    </LinearLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
