<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".FavoriteActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/posterImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@android:string/untitled"
                android:scaleType="centerInside"

                android:visibility="gone"
                app:layout_collapseMode="parallax"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@android:string/untitled"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_list_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listFavoriteMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/item_movie" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_detail_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:inputType="textShortMessage|textMultiLine|textCapWords"
                    android:text="@android:string/unknownName"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextViewEdits" />

                <TextView
                    android:id="@+id/vote_fix"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/vote"
                    android:textAlignment="viewEnd"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

                <TextView
                    android:id="@+id/vote_average"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@android:string/unknownName"
                    android:textAlignment="viewStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/vote_fix"
                    app:layout_constraintTop_toTopOf="@+id/vote_fix" />

                <TextView
                    android:id="@+id/type_fix"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textAlignment="viewEnd"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vote_fix" />

                <TextView
                    android:id="@+id/media_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@android:string/unknownName"
                    android:textAlignment="viewStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/type_fix"
                    app:layout_constraintTop_toTopOf="@+id/type_fix" />

                <TextView
                    android:id="@+id/release_fix"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/release_at"
                    android:textAlignment="viewEnd"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/type_fix" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@android:string/unknownName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/release_fix"
                    app:layout_constraintTop_toTopOf="@+id/release_fix" />

                <TextView
                    android:id="@+id/overview_fix"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textAlignment="viewEnd"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/release_fix" />

                <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/overview_fix"
                    app:layout_constraintTop_toTopOf="@+id/overview_fix">

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textLongMessage|textMultiLine"
                        android:text="@android:string/unknownName"
                        android:textAlignment="viewStart"
                        tools:ignore="TextViewEdits" />
                </ScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/ic_dialog_email" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
